--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+* {
+    font-family: monospace;
+    background-color: black;
+}
+
+h1 {
+    color: greenyellow;
+}
