Added HTML/CSS for leaderboard page UI

--- a/src/app/pages/leaderboard/leaderboard.component.html
+++ b/src/app/pages/leaderboard/leaderboard.component.html
@@ -1,1 +1,22 @@
-<p>leaderboard works!</p>
+<div class="centered-content">
+    <div class="header-container">
+        <h1 class="title leaderboard-title">
+            Leaderboard
+        </h1>
+        <h1 class="title browse-title">
+            Browse
+        </h1>
+    </div>
+    <div class="leaderboard-container">
+        <h1 class="leaderboard-item">
+            1.
+        </h1>
+        <h1 class="leaderboard-item">
+            2.
+        </h1>
+        <h1 class="leaderboard-item">
+            3.
+        </h1>
+    </div>
+    
+</div>
