Added hover effect to UI titles

--- a/src/app/pages/leaderboard/leaderboard.component.css
+++ b/src/app/pages/leaderboard/leaderboard.component.css
@@ -24,3 +24,8 @@
 .leaderboard-item {
     font-size: 16px;
 }
+
+.header-container h1:hover {
+    color: black;
+    background-color: greenyellow;
+}
