created leaderboard UI component and connected to APIs

--- a/src/app/pages/leaderboard/leaderboard.component.css
+++ b/src/app/pages/leaderboard/leaderboard.component.css
@@ -25,6 +25,10 @@
     font-size: 16px;
 }
 
+.leaderboard-item:hover {
+    text-decoration: underline dotted;
+}
+
 .header-container h1:hover {
     color: black;
     background-color: greenyellow;
