--- a/src/app/pages/leaderboard/leaderboard.component.html
+++ b/src/app/pages/leaderboard/leaderboard.component.html
@@ -1,10 +1,13 @@
 <div class="centered-content">
     <div class="header-container">
-        <h1 class="title leaderboard-title">
+        <h1 class="title">
             Leaderboard
         </h1>
-        <h1 class="title browse-title">
+        <h1 class="title">
             Browse
+        </h1>
+        <h1 class="title">
+            Vote
         </h1>
     </div>
     <div class="leaderboard-container">
