--- a/src/app/pages/leaderboard/leaderboard.component.html
+++ b/src/app/pages/leaderboard/leaderboard.component.html
@@ -12,7 +12,7 @@
     </div>
     <div class="leaderboard-container">
         <div *ngIf="booksLoaded && votesLoaded; else loading">
-            <div *ngFor="let book of calculateTopThreeBooks(); let i = index"> 
+            <div *ngFor="let book of calculateTopXBooks(3); let i = index"> 
                 <h1 class="leaderboard-item">
                     {{ i + 1 }}.  {{ book.titleAuthor }}  (SCORE: {{ book.score }})
                 </h1>
