--- a/src/app/pages/leaderboard/leaderboard.component.css
+++ b/src/app/pages/leaderboard/leaderboard.component.css
@@ -1,19 +1,3 @@
-.centered-content {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 300px;
-    flex-direction: column;
-}
-
-.header-container {
-    display: flex;
-    width: 100%;
-    max-width: 600px;
-    justify-content: space-evenly;
-    align-items: center;
-}
-
 .leaderboard-container {
     display: flex;
     flex-direction: column;
@@ -22,15 +6,5 @@
 }
 
 .leaderboard-item {
-    font-size: 16px;
-    color: grey;
-}
-
-.leaderboard-item:hover {
-    text-decoration: underline dotted;
-}
-
-.header-container h1:hover {
-    color: black;
-    background-color: greenyellow;
+    color: white;
 }
