created empty vote component

--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -6,7 +6,7 @@
         <h1 class="title">
             Browse
         </h1>
-        <h1 class="title">
+        <h1 class="title" routerLink="/vote">
             Vote
         </h1>
     </div>
