--- a/src/app/pages/leaderboard/leaderboard.component.html
+++ b/src/app/pages/leaderboard/leaderboard.component.html
@@ -3,10 +3,10 @@
         <h1 class="title">
             Leaderboard
         </h1>
-        <h1 class="title" routerLink="browse">
+        <h1 class="title" routerLink="/browse">
             Browse
         </h1>
-        <h1 class="title">
+        <h1 class="title" routerLink="/vote">
             Vote
         </h1>
     </div>
