--- a/src/app/pages/vote/vote.component.css
+++ b/src/app/pages/vote/vote.component.css
@@ -10,61 +10,46 @@ option {
 }
 
 
-.star-cb-group {
-    /* flip the order so we can use the + and ~ combinators */
+.rating {
+    /* flip the order so we can use ~ and + */
     unicode-bidi: bidi-override;
     direction: rtl;
 }
 
-.star-cb-group * {
+.rating * {
     font-size: 2rem;
 }
 
-.star-cb-group > input {
+/* gets rid of the input=radio default buttons for all direct children */
+.rating > input {
     display: none;
 }
 
-.star-cb-group > input + label {
+.rating > input + label {
     /* only enough room for the star */
     display: inline-block;
-    overflow: hidden;
     text-indent: 9999px;
-    width: 1em;
+    width: 30px;
     white-space: nowrap;
-    cursor: pointer;
 }
 
-.star-cb-group > input + label:before {
+.rating > input + label:before {
     display: inline-block;
     text-indent: -9999px;
     content: "☆";
     color: #888;
 }
-  
-.star-cb-group > input:checked ~ label:before, .star-cb-group > input + label:hover ~ label:before, .star-cb-group > input + label:hover:before {
+
+/* makes effect stick after a star is clicked on */
+.rating > input:checked ~ label:before {
     content: "★";
-    color: #e52;
-    text-shadow: 0 0 1px #333;
+    color:limegreen;
+    text-shadow: 0 0 1px rgb(118, 225, 118);
 }
 
-.star-cb-group > .star-cb-clear + label {
-    text-indent: -9999px;
-    width: .5em;
-    margin-left: -.5em;
-}
-
-.star-cb-group > .star-cb-clear + label:before {
-    width: .5em;
-}
-
-.star-cb-group:hover > input + label:before {
-    content: "☆";
-    color: #888;
-    text-shadow: none;
-}
-
-.star-cb-group:hover > input + label:hover ~ label:before, .star-cb-group:hover > input + label:hover:before {
+/* highlights current star cursor is hovering over and every one before it */
+.rating:hover > input + label:hover ~ label:before, .rating:hover > input + label:hover:before {
     content: "★";
-    color: #e52;
-    text-shadow: 0 0 1px #333;
+    color: limegreen;
+    text-shadow: 0 0 8px rgb(118, 225, 118);
 }
