--- a/src/app/pages/vote/vote.component.html
+++ b/src/app/pages/vote/vote.component.html
@@ -24,13 +24,12 @@
         <ng-template #loading> Loading... </ng-template>
         <p>
             <label class="white"> Rating: </label>
-            <span class="star-cb-group">
+            <span class="rating">
                 <input type="radio" id="rating-5" name="stars" value="5" formControlName="stars">/> <label for="rating-5">5</label>
                 <input type="radio" id="rating-4" name="stars" value="4" formControlName="stars" checked="checked"/> <label for="rating-4">4</label>
                 <input type="radio" id="rating-3" name="stars" value="3" formControlName="stars"/> <label for="rating-3">3</label>
                 <input type="radio" id="rating-2" name="stars" value="2" formControlName="stars"/> <label for="rating-2">2</label>
                 <input type="radio" id="rating-1" name="stars" value="1" formControlName="stars"/> <label for="rating-1">1</label>
-                <input type="radio" id="rating-0" name="stars" value="0" formControlName="stars" class="star-cb-clear" /> <label for="rating-0">0</label>
             </span>
         </p>
 
