--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -17,7 +17,9 @@
                     <summary> {{ getTitleAuthorString(bookId) }}</summary>
                     <div *ngIf="votesDict[bookId].length > 0; else NoVotes">
                         <span *ngFor="let singleVote of votesDict[bookId]">
-                            <p class="vote-item"> {{ singleVote.username }}: {{ singleVote.score}}★ </p>
+                            <p class="vote-item"> {{ singleVote.username }}: {{ singleVote.score}}
+                                <span *ngFor="let _ of [].constructor(singleVote.score)">★</span>
+                            </p>
                         </span>
                     </div>
                     <ng-template #NoVotes>
