--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -11,14 +11,14 @@
         </h1>
     </div>
     <div class="content-container">
-        <div *ngIf="booksLoaded && votesLoaded; else loading">
-            <div *ngFor="let bookId of getArrayOfBookIds()">
-                <details class="book-item" >
-                    <summary> {{ getTitleAuthorString(bookId) }}</summary>
-                    <div *ngIf="votesDict[bookId].length > 0; else NoVotes">
-                        <span *ngFor="let singleVote of votesDict[bookId]">
-                            <p class="vote-item"> {{ singleVote.username }}: {{ singleVote.score}}
-                                <span *ngFor="let _ of [].constructor(singleVote.score)">★</span>
+        <div *ngIf="loaded; else loading">
+            <div *ngFor="let book of voteData">
+                <details class="white">
+                    <summary> {{ book.title }} {{ book.author }}</summary>
+                    <div *ngIf="book.votes.length > 0; else NoVotes">
+                        <span *ngFor="let vote of book.votes">
+                            <p class="vote-item"> {{ vote.username }}: {{ vote.stars}}
+                                <span *ngFor="let _ of [].constructor(vote.stars)">★</span>
                             </p>
                         </span>
                     </div>
