--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -1,14 +1,8 @@
 <div class="centered-content">
     <div class="header-container">
-        <h1 class="title" routerLink="">
-            Leaderboard
-        </h1>
-        <h1 class="title">
-            Browse
-        </h1>
-        <h1 class="title" routerLink="/vote">
-            Vote
-        </h1>
+        <h1 class="title" routerLink=""> Leaderboard </h1>
+        <h1 class="title"> Browse </h1>
+        <h1 class="title" routerLink="/vote"> Vote </h1>
     </div>
     <div class="content-container">
         <div *ngIf="loaded; else loading">
