--- a/src/app/pages/vote/vote.component.html
+++ b/src/app/pages/vote/vote.component.html
@@ -1,14 +1,8 @@
 <div class="centered-content">
     <div class="header-container">
-        <h1 class="title" routerLink="">
-            Leaderboard
-        </h1>
-        <h1 class="title" routerLink="/browse">
-            Browse
-        </h1>
-        <h1 class="title">
-            Vote
-        </h1>
+        <h1 class="title" routerLink=""> Leaderboard </h1>
+        <h1 class="title" routerLink="/browse"> Browse </h1>
+        <h1 class="title"> Vote </h1>
     </div>
     <form [formGroup]="voteForm" (ngSubmit)="onSubmit()">
         <div>
