--- a/src/app/pages/vote/vote.component.html
+++ b/src/app/pages/vote/vote.component.html
@@ -16,6 +16,7 @@
                 <option value=""> Choose a Book...</option>
                 <option *ngFor="let book of this.books"> {{ book.title }}, {{ book.author }} </option>
             </select>
+            <a class="white left-margin">Click to add new book</a>
         </div>
         <div>
             <label class="white"> Rating: </label>
