Add basic user authentication

--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -3,6 +3,7 @@
         <h1 class="title" routerLink=""> Leaderboard </h1>
         <h1 class="title"> Browse </h1>
         <h1 class="title" routerLink="/vote"> Vote </h1>
+        <h1 class="title" routerLink="/login"> Login </h1>
     </div>
     <div class="content-container">
         <div *ngIf="loaded; else loading">
