--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,12 @@ h1 {
     justify-content: space-evenly;
 }
 
+.login-container {
+    position: fixed;
+    left: 700px;
+    top: 100px;
+}
+
 .header-container h1:hover {
     color: black;
     background-color: greenyellow;
