--- a/src/app/pages/leaderboard/leaderboard.component.html
+++ b/src/app/pages/leaderboard/leaderboard.component.html
@@ -3,6 +3,7 @@
         <h1 class="title"> Leaderboard </h1>
         <h1 class="title" routerLink="/browse"> Browse </h1>
         <h1 class="title" routerLink="/vote"> Vote </h1>
+        <h1 class="title" routerLink="/login"> Login </h1>
     </div>
     <div class="leaderboard-container">
         <div *ngIf="loaded; else loading">
