--- a/src/app/pages/vote/vote.component.html
+++ b/src/app/pages/vote/vote.component.html
@@ -3,6 +3,7 @@
         <h1 class="title" routerLink=""> Leaderboard </h1>
         <h1 class="title" routerLink="/browse"> Browse </h1>
         <h1 class="title"> Vote </h1>
+        <h1 class="title" routerLink="/login"> Login </h1>
     </div>
     <form [formGroup]="voteForm" (ngSubmit)="onSubmit()">
         <div>
