Create page for logged in users to delete account and votes

--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -5,6 +5,7 @@
 
 button:disabled {
     background: grey;
+    color: black;
 }
 
 button {
@@ -22,4 +23,17 @@ a:hover {
 a {
     text-decoration: none;
     color: white;
+}
+
+input {
+    color: white;
+}
+
+label {
+    color: white;
+}
+
+p {
+    color: orange;
+    font-weight: bold;
 }
