--- a/src/app/pages/browse/browse.component.html
+++ b/src/app/pages/browse/browse.component.html
@@ -7,29 +7,29 @@
     </div>
     <div class="content-container">
         <div *ngIf="loaded; else loading">
-            <div *ngFor="let book of voteData">
-                <details class="white">
-                    <summary> {{ book.title }} {{ book.author }}</summary>
-                    <div *ngIf="book.votes.length > 0; else NoVotes">
-                        <span *ngFor="let vote of book.votes">
-                            <p class="vote-item"> {{ vote.username }}: {{ vote.stars}}
-                                <span *ngFor="let _ of [].constructor(vote.stars)">★</span>
-                            </p>
-                        </span>
-                    </div>
-                    <ng-template #NoVotes>
-                        <p class="vote-item">
-                            No votes for this book yet :(
-                        </p>
-                    </ng-template>
+            <ng-container *ngFor="let book of voteData">
+                <details>
+                    <summary> {{ book.title }} {{ book.author }} </summary>
+                    <br>
+                    <table style="width:300px">
+                        <tr> 
+                            <th style="width:20%"></th>
+                            <th style="width:70%">User</th>
+                            <th style="width:10%">Vote</th>
+                        </tr>
+                        <ng-container *ngFor="let vote of book.votes">
+                        <tr>
+                            <td class="stars"><span *ngFor="let _ of [].constructor(vote.stars)">★</span></td>
+                            <td>{{ vote.username }} </td>
+                            <td>{{ vote.stars }} </td>
+                        </tr>
+                        </ng-container>
+                    </table>
+                    <br>
+                    <p *ngIf="book.votes.length == 0" class="no-votes"> No votes for this book yet :( </p> 
                 </details>
-            </div>
-            
+            </ng-container>
         </div>
-        <ng-template #loading>
-            <p class="book-item">
-                Loading...
-            </p>
-        </ng-template>
+        <ng-template #loading> <p> Loading... </p> </ng-template>
     </div>
 </div>
