--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,24 @@ h1 {
     top: 100px;
 }
 
+.login-header {
+    position: fixed;
+    left: 400px;
+    top: 100px;
+}
+
+.login-header button {
+    color: black;
+    background-color: greenyellow;
+    cursor: pointer;
+}
+
+.login-header button:hover {
+    color: greenyellow;
+    background-color: black;
+    cursor: pointer;
+}
+
 .header-container h1:hover {
     color: black;
     background-color: greenyellow;
