--- a/src/app/pages/login/account/account.component.html
+++ b/src/app/pages/login/account/account.component.html
@@ -3,9 +3,12 @@
         <h1 class="title" routerLink=""> Leaderboard </h1>
         <h1 class="title" routerLink="/browse"> Browse </h1>
         <h1 class="title" routerLink="/vote"> Vote </h1>
-        <h1 class="title"> Login </h1>
     </div>
-    <button (click)="deleteAccount()">Delete Account</button>
+    <div class="login-header">
+        <button *ngIf="!loggedIn()" (click)="login()"> Login </button>
+        <button *ngIf="loggedIn()" (click)="logout()"> Logout </button>
+    </div>
+    <button class="orange-btn" (click)="deleteAccount()">Delete Account</button>
     <p> Warning: all your account data will be permanently deleted</p>
     <br>
     <div class="votes-container">
@@ -20,7 +23,7 @@
             <tr>
                 <td><span *ngFor="let _ of [].constructor(vote.stars)">★</span></td>
                 <td>{{ vote.title }} </td>
-                <td><button ngDefaultControl [(ngModel)]="vote.voteId" (click)="deleteVote(vote.voteId)"> Delete</button></td>
+                <td><button class="orange-btn" ngDefaultControl [(ngModel)]="vote.voteId" (click)="deleteVote(vote.voteId)"> Delete</button></td>
             </tr>
             </ng-container>
         </table>
