--- a/src/app/pages/vote/vote.component.html
+++ b/src/app/pages/vote/vote.component.html
@@ -3,7 +3,10 @@
         <h1 class="title" routerLink=""> Leaderboard </h1>
         <h1 class="title" routerLink="/browse"> Browse </h1>
         <h1 class="title" routerLink="/vote"> Vote </h1>
-        <h1 class="title" routerLink="/login"> Login </h1>
+    </div>
+    <div class="login-header">
+        <button *ngIf="!loggedIn()" (click)="login()"> Login </button>
+        <button *ngIf="loggedIn()" (click)="logout()"> Logout </button>
     </div>
     <form [formGroup]="voteForm" (ngSubmit)="onSubmit()">
         <select required formControlName="book">
