--- a/src/app/pages/leaderboard/leaderboard.component.css
+++ b/src/app/pages/leaderboard/leaderboard.component.css
@@ -1,6 +1,7 @@
 .leaderboard-container {
     display: flex;
     flex-direction: column;
+    margin-left: 20%;
     width: 100%;
     max-width: 480px;
 }
